fixed overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -380,6 +380,12 @@ section {
 }
 
 @media only screen and (max-width:520px) {
+    .featured::before {
+        padding: 9em 0;
+        overflow: hidden;
+        width: 250px;
+        height: 20px;
+    }
     .logo {
         text {
             width: 100%;
@@ -471,6 +477,7 @@ section {
     }
     .scrolling-active-header {
         background-color: rgba(189, 32, 79, 0.9);
+        backdrop-filter: blur(2rem);
         font-size: 1.2em;
         padding: 1em 3em 0 2em;
         transition: ease .3s;
@@ -483,6 +490,7 @@ section {
                 grid-template-columns: left;
             }
         }
+        header {}
     }
     .scrolling-active-social {
         background: #720126;
